# AutoTiM

./: .gitignore  .pylintrc  Authors.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  wrapper_script.sh
autotim/app/: app.py  authconfig.py  dependencies.py
autotim/app/endpoints/: predict_bp.py  store_bp.py  train_bp.py
autotim/app/endpoints/utils/: dataframe_utils.py  file_handling_utils.py  model_creation_utils.py  reponse_utils.py
autotim/autotim_execution/: docker-compose.yml
autotim/autotim_execution/.env/: autotim.env  postgres.env
autotim/autotim_execution/mlflow/: Dockerfile  requirements.txt
autotim/feature_engineering/: automated_feature_engineering.py  data_imputation.py  exceptions.py
autotim/model_selection/: exceptions.py  model_selection.py  pdf_creation.py  utils.py
autotim/model_training/: autotim_training.py
autotim/prediction_service/: autotim_model.py  autotim_prediction_service.py  mlflow_model_loader.py
autotim/storage_client/: file_store_manager.py  gcs_bucket_client.py  gcs_storage_config.py  local_client.py
doc/endpoint_flow/predict-endpoint/: predict_flow.drawio
doc/endpoint_flow/store-endpoint/: store_flow.drawio
doc/endpoint_flow/train-endpoint/: train_flow.drawio
doc/gcp_architecture/: README.md  Workflows.drawio
doc/tutorial/: README.md
doc/tutorial/dataset/: data.csv  predict.csv
tests_autotim/app/: app_test.py
tests_autotim/app/endpoints/: predict_bp_test.py  store_bp_test.py
tests_autotim/storage_client/: local_client_test.py
tests_autotim/test_objects/: test_objects.py
