[tool.poetry]
name = "auto-tim"
version = "0.1.0"
description = "AutoTiM"
authors = ["Nico Grosskreuz <nico.grosskreuz@inovex.de>"]
readme = "README.md"
packages = [{include = "autotim"}]

[tool.poetry.dependencies]
python = "~3.8"
transformers = {extras = ["torch"], version = "4.25.1"}
torch = "1.13.1"
#locust = "^2.15.1"
# matrixprofile = { git = "https://github.com/matrix-profile-foundation/matrixprofile.git" }
# git+https://github.com/matrix-profile-foundation/matrixprofile#egg=matrixprofile
mlflow = "^2.3.1"
# matrixprofile = "^1.1.0"
tsfresh = "^0.19.0"
# statsmodels = "^0.13.0"
h2o = "3.36.1.4"
matplotlib = "3.5.1"
scikit-learn = "1.0.2"
pandas = "1.3.0"
#Flask = "2.1.2"
#Flask-API = "3.0.post1"
#Flask-Injector = "0.14.0"
#Flask-BasicAuth = "0.2.*"
#gunicorn = "20.1.0"
pylint = "2.7.2"
# coverage = "6.4.4"
# gcsfs = "^2022.5.0"
# google-cloud-storage = "^2.5.0"
# google_api_core = "^2.10.2"
# mock = "4.0.3"
numpy = "^1.23.4"
# google = "^3.0.0"
#protobuf = ">3.10.0"
injector = "^0.20.1"
# seaborn = "^0.11.2"
cryptography = ">=41.0.2"
# frozenlist = "^1.3.1"
certifi = ">=2023.07.22"
# charset_normalizer = "^2.1.1"
# gitdb = "^4.0.9"
# cachetools = "^5.2.0"
# attrs = "^22.1.0"
# async_timeout = "^4.0.2"
# aiosignal = "^1.2.0"
# azure-core = "^1.26.0"
# sqlparse = "^0.4.3"
#prometheus_flask_exporter = "^0.20.3"
#prometheus_client = "^0.15.0"
# querystring_parser = "^1.2.4"
# python-abc = "^0.2.0"
numba = "^0.57.1"
SQLAlchemy = "^1.4.46"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
